Fixed layout bug and added avatar to profile post

--- a/CAN/WebContent/css/profile_style.css
+++ b/CAN/WebContent/css/profile_style.css
@@ -146,7 +146,7 @@ button.delete_post:hover {
 }
 
 .profile-body {
-	width:98%;
+	width:1500px;
 	background-color: #B9DEED ;
 	box-shadow:0px 3px 5px rgba(0,0,0,0.2);
 	padding:20px 30px 60px;
@@ -157,7 +157,6 @@ button.delete_post:hover {
 }
 
 .profile-body p{
-	display:relative;
 	margin-bottom:7px;
 	color:#333;
 	font-size:24px;
@@ -257,7 +256,6 @@ button.delete_post:hover {
 }
 
 .post{
-	overflow: auto;
 	box-shadow: 0px 5px 14px rgba(0,0,0,0.1);
 	width:100%;
 	height:100%;
